2007-08-11  Thomas E. Dickey  <dickey@invisible-island.net>

	* HISTORY:
	tweak to build with latest ncurses (does not rely on new api's)

2007-04-29  Thomas E. Dickey  <dickey@invisible-island.net>

	* HISTORY, tack.h: mark 1.05

	* configure: regen'd

	* configure.in: update LIB_LINK symbol to match CF_WITH_LIBTOOL change

	* tack.h: use SIG_ATOMIC_T

	* sysdep.c:
	move include of <signal.h> to tack.h so SIG_ATOMIC_T definition works.

	* tack.c: use EXIT_FAILURE/EXIT_SUCCESS

	* sysdep.c: use EXIT_FAILURE/EXIT_SUCCESS
	use SIG_ATOMIC_T

	* output.c: add braces for readability

	* tack.h: trim whitespace

	* scan.c, init.c: use EXIT_FAILURE/EXIT_SUCCESS

	* configure.in, aclocal.m4: add CF_SIG_ATOMIC_T

	* control.c: use SIG_ATOMIC_T

	* Makefile.in:
	update $(LINK) to work with ncurses after importing CF_WITH_LIBTOOL change
	that moved $(CC) into $(LIBTOOL_LINK) symbol.

2007-04-08  Thomas E. Dickey  <dickey@invisible-island.net>

	* configure: regen'd

	* Makefile.in: define $(INCDIR) - needed for building in ncurses tree

	* tack.h:
	expand the ExitProgram() macro into a function which can call the ncurses-
	and tack-specific leak-auditing functions.

	* configure.in:
	check for _nc_free_tic() function, since that's what tack needs.

	* edit.c: add tack_edit_leaks(), to help audit memory leaks

	* tack.c:
	add ExitProgram() function, to free all application memory on exit to simplify
	leak-checking.

	* fun.c: add tack_fun_leaks(), to help audit memory leaks

	* init.c: free the TERMTYPE used just for error-checking (memory leak)

	* tack.h:
	define ExitProgram() macro to hide details of memory audit on exit().

	* tack.c, init.c, sysdep.c: use ExitProgram() macro

	* configure.in: add "--disable-leaks" and related testing options.

	* aclocal.m4:
	add macros used for "--disable-leaks" and related testing options

	* configure.in:
	use CF_NCURSES_CONFIG to find ncurses5-config, etc., fixing rpath issues.